16/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: flask-app-service-abdumalik-ingres
  namespace: a-nabixojayev
spec:
  ingressClassName: nginix
  rules:
    - host: a-nabixojayev.sts404.uz
      http:
        paths:
          - backend:
              service:
                name: flask-app-service-abdumalik-clusterip
                port:
                  number: 80
            path: /check-ingress
            pathType: Prefix
status:
  loadBalancer: {}
